--- a/views/checkout.hbs
+++ b/views/checkout.hbs
@@ -40,14 +40,14 @@
                     </ul>
                     {{/each}}
                     <div class="row cart-total">
-                        <div class="col-md-8 col-sm-6"></div>
-                        <div class="col-md-4 col-sm-6">
+                        <div class="col-md-8 col-sm-6 col-xs-4"></div>
+                        <div class="col-md-4 col-sm-6 col-xs-8">
                             <div class="row">
-                                <div class="col-md-5">
+                                <div class="col-md-6 col-sm-6 col-xs-6">
                                     <div class="cart-total-label">Ship:</div>
                                     <div class="cart-total-label">Total price:</div>
                                 </div>
-                                <div class="col-md-7">
+                                <div class="col-md-6 col-sm-6 col-xs-6">
                                     <div>$ {{userCart.ship}}</div>
                                     <div id="cart-total-price-label">$ {{userCart.total}}</div>
                                 </div>
