--- a/views/user/history.hbs
+++ b/views/user/history.hbs
@@ -5,63 +5,67 @@
             <div class=" cart-items heading">
                 <h1 style="font-size: 3em;">History</h1>
                 <div class="history-list">
-                    <h3 class="new-date">Delivered: 02/06/2022</h3>
+
+                    {{#if orders}}
+                    {{#each orders}}
                     <ul class="unit">
-                        <li><span>Item</span></li>
-                        <li><span>Product Name</span></li>
-                        <li><span>Unit Price</span></li>
-                        <div class="clearfix"> </div>
-                    </ul>
-                    <ul class="cart-header">
-                        <li class="ring-in"><a href="/product"><img src="/images/c.jpg" class="img-responsive"
-                                    alt=""></a>
-                        </li>
-                        <li><span>Bracelets</span></li>
-                        <li><span>$ 290.00</span></li>
-
-                        <div class="clearfix"> </div>
-                    </ul>
-                    <ul class=" cart-header1">
-                        <li class="ring-in"><a href="/product"><img src="/images/c2.jpg" class="img-responsive"
-                                    alt=""></a>
-                        </li>
-                        <li><span>Watches</span></li>
-                        <li><span>$ 300.00</span></li>
-                        <div class="clearfix"> </div>
-                    </ul>
-                    <ul class="cart-header2">
-                        <li class="ring-in"><a href="/product"><img src="/images/c3.jpg" class="img-responsive"
-                                    alt=""></a>
-                        </li>
-                        <li><span>Handbag</span></li>
-                        <li><span>$ 360.00</span></li>
+                        <li class="text-center"><span>Item</span></li>
+                        <li class="text-center"><span>Product Name</span></li>
+                        {{!-- <li></li> --}}
+                        <li class="text-center"><span>Unit Price</span></li>
                         <div class="clearfix"> </div>
                     </ul>
 
-                    <h3 class="new-date">Delivered: 06/02/2021</h3>
-                    <ul class="unit">
-                        <li><span>Item</span></li>
-                        <li><span>Product Name</span></li>
-                        <li><span>Unit Price</span></li>
-                        <div class="clearfix"> </div>
-                    </ul>
-                    <ul class="cart-header">
-                        <li class="ring-in"><a href="/product"><img src="/images/c.jpg" class="img-responsive"
-                                    alt=""></a>
+                    {{#each this.detailProduct}}
+                    <ul class="cart-header history-cart-header">
+                        <li class="ring-in"><a href="/product/{{this.slug}}"><img src="{{this.image.[0].secure_url}}"
+                                    width="100px" height="100px" class="img-responsive history-img" alt=""></a>
                         </li>
-                        <li><span>Bracelets</span></li>
-                        <li><span>$ 290.00</span></li>
+                        <li><span class="item-name">{{this.name}}</span></li>
+                        <li><span class="item_price">$ {{this.price}}</span></li>
 
                         <div class="clearfix"> </div>
                     </ul>
-                    <ul class=" cart-header1">
-                        <li class="ring-in"><a href="/product"><img src="/images/c2.jpg" class="img-responsive"
-                                    alt=""></a>
-                        </li>
-                        <li><span>Watches</span></li>
-                        <li><span>$ 300.00</span></li>
-                        <div class="clearfix"> </div>
-                    </ul>
+                    {{/each}}
+                    <div class="row history-info">
+                        <div class="col-md-6 col-sm-5">
+                            <div class="row">
+                                <div class="col-md-1"></div>
+                                <div class="col-md-4 col-sm-6 col-xs-6">
+                                    <div><strong>Name:</strong></div>
+                                    <div><strong>Number:</strong></div>
+                                    <div><strong>Address:</strong></div>
+                                    <div><strong>Payment:</strong></div>
+                                </div>
+                                <div class="col-md-7 col-sm-6 col-xs-6">
+                                    <div>{{this.name}}</div>
+                                    <div>{{this.number}}</div>
+                                    <div>{{this.address}}</div>
+                                    <div>{{this.payment}}</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-sm-7">
+                            <div class="row">
+                                <div class="col-md-2 col-sm-2"></div>
+                                <div class="col-md-5 col-sm-5 col-xs-6">
+                                    <div><strong>Checkout date:</strong></div>
+                                    <div><strong>Received date:</strong></div>
+                                    <div><strong>Ship:</strong></div>
+                                    <div><strong>Total price:</strong></div>
+                                </div>
+                                <div class="col-md-5 col-sm-5 col-xs-6">
+                                    <div>{{this.checkoutDate}}</div>
+                                    <div>{{this.receivedDate}}</div>
+                                    <div>$ {{this.ship}}</div>
+                                    <div>$ {{this.total}}</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    {{/each}}
+                    {{/if}}
                 </div>
             </div>
         </div>
